<resources>
    <string name="app_name" translatable="false">SourCherry</string>
    <string name="button_create_database">Create database</string>
    <string name="textview_select_database">Select database</string>
    <string name="button_select_database_single">Single file</string>
    <string name="button_select_database_multi">Multi file</string>
    <string name="button_open">Open</string>
    <string name="button_ok">OK</string>
    <string name="button_wait">Wait</string>
    <string name="button_select">Select</string>
    <string name="button_leave">Leave</string>
    <string name="button_exit">Exit</string>
    <string name="button_insert">Insert</string>
    <string name="text_password_label">Password</string>
    <string name="text_message_no_database">Select a CherryTree database</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="checkbox_open_database_startup">Open this database on startup</string>
    <string name="navigation_drawer_checkbox_omit_marked_to_exclude">Omit marked to exclude</string>
    <string name="save_open_dialog_fragment_title">Save or Open the File</string>
    <string name="dialog_save_open_fragment_remember_choice_checkBox">Remember choice</string>
    <string name="dialog_node_type_change_title">Node type change</string>
    <string name="dialog_node_type_change_message">Leaving the rich text node type will lose all the formatting for this node</string>
    <string name="alert_dialog_unsaved_changes_title">Unsaved changes</string>
    <string name="alert_dialog_unsaved_changes_message">Leaving editor without saving changes</string>
    <string name="alert_dialog_sync_in_progress_title">Database sync is in progress</string>
    <string name="alert_dialog_sync_in_progress_message">To be able to edit the database, you have to either cancel the sync process or wait for it to finish.</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_move">Move</string>
    <string name="button_move_to_main_menu">Move to main menu</string>
    <string name="node_name">Node name</string>
    <string name="node_type">Node type</string>
    <string name="radio_button_rich_text">Rich text</string>
    <string name="radio_button_plain_text">Plain text</string>
    <string name="radio_button_automatic_syntax_highlighting">Automatic syntax highlighting</string>
    <string name="exclude_from_searches">Exclude from searches</string>
    <string name="exclude_from_searches_this_node">This node</string>
    <string name="exclude_from_searches_subnodes">The subnodes</string>
    <string name="button_create">Create</string>
    <string name="main_activity_imported_databases">Imported Databases</string>
    <string name="main_activity_imported_databases_item_internal">(int) %1$s</string>
    <string name="main_activity_imported_databases_item_external">(ext) %1$s</string>
    <string name="main_activity_imported_databases_delete_dialog_title">Delete</string>
    <string name="main_activity_imported_databases_delete_dialog_message">Database imported to app-specific storage will be deleted</string>
    <string name="button_delete">Delete</string>
    <string name="button_export">Export</string>
    <string name="button_overwrite">Overwrite</string>
    <string name="toast_no_bookmarks_message">There are no bookmarks</string>
    <string name="toast_confirm_mainview_exit">Press BACK again to leave this screen</string>
    <string name="snackbar_dismiss_action">Dismiss</string>
    <string name="toast_error_database_does_not_exists">Database does not exist</string>
    <string name="toast_error_node_does_not_exists">Node does not exist</string>
    <string name="toast_error_cant_read_database">Can\'t read database file. Try select it again.</string>
    <string name="toast_error_failed_to_open_database">Failed to open the database</string>
    <string name="toast_error_could_not_open_a_file_to_copy_the_database">Could not open a file to copy the database</string>
    <string name="toast_error_could_not_copy_the_database">Could not copy the database</string>
    <string name="toast_error_does_not_look_like_a_cherrytree_database">Does not look like a CherryTree database</string>
    <string name="toast_error_xml_databases_are_not_supported">XML databases without password are not supported</string>
    <string name="toast_error_failed_to_find_node_content">Failed to find node content</string>
    <string name="toast_error_failed_to_load_node_content">Failed to load node content</string>
    <string name="toast_error_failed_to_get_node_properties">Failed to get node properties</string>
    <string name="toast_error_failed_to_remove_nodes_from_bookmarks">Failed to remove nodes from bookmarks</string>
    <string name="toast_error_failed_to_save_an_attached_file">Failed to save an attached file</string>
    <string name="toast_message_please_enter_password">Please enter the password</string>
    <string name="toast_message_please_open_a_node">Please open a node</string>
    <string name="toast_message_rich_text_node_editing_not_supported">Rich text node editing is not supported</string>
    <string name="toast_message_not_password_protected_xml_saves_changes_externally">Not password protected XML databases are already saved externally</string>
    <string name="toast_message_incompatible_database_types">Incompatible database types.</string>
    <string name="toast_message_codebox_cant_be_formatted">Codebox can\'t be formatted</string>
    <string name="toast_message_updated_drawer_menu">Updated drawer menu</string>
    <string name="toast_message_attach_file_place_cursor">Place the cursor where the file should be inserted</string>
    <string name="toast_message_attach_file_insert_into_table">File can\'t be inserted into the table</string>
    <string name="toast_message_insert_image_place_cursor">Place the cursor where the image should be inserted</string>
    <string name="toast_message_insert_image_insert_into_table">Image can\'t be inserted into the table</string>
    <string name="toast_message_insert_table_place_cursor">Place the cursor where the table should be inserted</string>
    <string name="toast_message_fill_in_the_row_count">Fill in the row count</string>
    <string name="toast_message_row_count_cant_be_0">Row count can\'t be 0</string>
    <string name="toast_message_fill_in_the_cplumn_count">Fill in the column count</string>
    <string name="toast_message_column_count_cant_be_0">Column count can\'t be 0</string>
    <string name="toast_message_fill_in_default_col_width">Fill in default column width</string>
    <string name="toast_message_default_column_width_cant_be_0">Default column width can\'t be 0</string>
    <string name="toast_message_table_cant_be_inserted_here">Table can\'t be inserted here</string>
    <string name="toast_message_start_list_place_cursor">Place the cursor to mark where to start the list</string>
    <string name="toast_message_start_list_insert_into_table">List can\'t be in the table</string>
    <string name="open_database_fragment_copying_database_message">Copying database to app-specific storage</string>
    <string name="open_database_fragment_extracting_database_message">Extracting database</string>
    <string name="toast_error_failed_to_save_file">Failed to save the file</string>
    <string name="toast_error_failed_to_open_file">Failed to open the file</string>
    <string name="toast_error_failed_to_open_file_large">File was too big (>%1$dmb)</string>
    <string name="toast_error_failed_to_open_file_large_OOM">File was too big. OutOfMemoryError exception.</string>
    <string name="toast_error_failed_to_load_image">Failed to load an image</string>
    <string name="toast_error_failed_to_insert_image">Failed to insert the image</string>
    <string name="toast_error_failed_to_load_image_large">Embedded image was too big (>%1$dmb)</string>
    <string name="toast_error_failed_to_compile_latex">Failed to compile latex code</string>
    <string name="options_menu_item_search">Search</string>
    <string name="options_menu_item_settings">Settings</string>
    <string name="options_menu_item_find_in_node">Find in node</string>
    <string name="options_menu_item_export_to_pdf">Export to PDF</string>
    <string name="options_menu_item_export_database">Export database</string>
    <string name="options_menu_item_rescan_database">Rescan database</string>
    <string name="preferences_auto_open_title">Automatically close drawer menu</string>
    <string name="preferences_auto_open_summary">Automatically close drawer menu when selected node does not have subnodes</string>
    <string name="preferences_dark_mode_title">Dark mode</string>
    <string name="preferences_default_file_action_title">Default file action</string>
    <string name="preferences_default_unsaved_changes_action_title">Default unsaved changes action</string>
    <string name="preferences_text_size_title">Text size</string>
    <string name="preferences_disable_linewrapping">Disable line wrapping</string>
    <string name="preferences_font_type_title">Font type</string>
    <string name="preferences_category_padding_title">Padding</string>
    <string name="preferences_category_padding_summary">Padding for node content in DP</string>
    <string name="preferences_category_padding_start_title">Left</string>
    <string name="preferences_category_padding_end_title">Right</string>
    <string name="preferences_restore_last_node_title">Restore last node on startup</string>
    <string name="edit_node_fragment_button_row_clear_formatting">CLEAR FORMATTING. Clears formatting of selected text in Rich-Text node.</string>
    <string name="edit_node_fragment_button_row_color_picker">COLOR PICKER. Opens another dialog to choose a color that foreground/background should be changed to when suing appropriate function.</string>
    <string name="edit_node_fragment_button_row_foreground_color">FOREGROUND COLOR. Changes foreground color of selected text in Rich-Text node.</string>
    <string name="edit_node_fragment_button_row_background_color">BACKGROUND COLOR. Changes background color of selected text in Rich-Text node.</string>
    <string name="edit_node_fragment_button_row_bold">BOLD. Toggle Bold font for selected text on and off.</string>
    <string name="edit_node_fragment_button_row_italic">ITALIC. Toggle Italic font for selected text on and off.</string>
    <string name="edit_node_fragment_button_row_underline">UNDERLINE. Toggle Underline font for selected text on and off.</string>
    <string name="edit_node_fragment_button_row_strikethrough">STRIKETHROUGH. Toggle Strikethrough font for selected text on and off.</string>
    <string name="edit_node_fragment_button_row_insert_menu">INSERT MENU. Opens menu with insert/attach options.</string>
    <string name="menu_item_action_menu_add_node">Add sibling node</string>
    <string name="menu_item_action_menu_add_subnode">Add subnode</string>
    <string name="menu_item_action_menu_add_to_bookmarks">Add to bookmarks</string>
    <string name="menu_item_action_menu_delete_node">Delete node</string>
    <string name="menu_item_action_menu_properties">Properties</string>
    <string name="move_node_textview_message">Use long tap to select the node</string>
    <string name="move_node_button_up_content_description">UP. When pressed - moves/loads menu one node up if it is not at the top of the tree.</string>
    <string name="move_node_button_home_content_description">HOME. When pressed - loads home menu (top of the tree).</string>
    <string name="toolbar_icon_edit_node">Edit node</string>
</resources>