<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of SourCherry.
  ~
  ~ SourCherry is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ SourCherry is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with SourCherry. If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbar_button_edit_node"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/toolbar_icon_edit_node"
        app:showAsAction="always"/>
    <group
        android:id="@+id/options_menu_mainview_group">
        <item
            android:id="@+id/options_menu_export_to_pdf"
            android:title="@string/options_menu_item_export_to_pdf"/>
        <item
            android:id="@+id/options_menu_rescan_database"
            android:title="@string/options_menu_item_rescan_database"
            android:visible="false"/>
        <item
            android:id="@+id/options_menu_export_database"
            android:title="@string/options_menu_item_export_database"/>
        <item
            android:id="@+id/options_menu_find_in_node"
            android:title="@string/options_menu_item_find_in_node"/>
        <item
            android:id="@+id/options_menu_search"
            android:title="@string/options_menu_item_search"/>
        <item
            android:id="@+id/options_menu_settings"
            android:title="@string/options_menu_item_settings"/>
    </group>
    <item
        android:id="@+id/options_menu_about"
        android:title="@string/options_menu_item_about" />
</menu>