<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of SourCherry.
  ~
  ~ SourCherry is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ SourCherry is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with SourCherry. If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:key="preferences_dark_mode"
        android:title="@string/preferences_dark_mode_title"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="System"
        android:entries="@array/dark_mode_entries"
        android:entryValues="@array/dark_mode_entries"/>

    <SeekBarPreference
        android:key="preferences_text_size"
        android:title="@string/preferences_text_size_title"
        app:min="10"
        android:max="25"
        android:defaultValue="15"
        app:showSeekBarValue="true"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="preferences_linewrap"
        android:title="@string/preferences_disable_linewrapping" />

    <ListPreference
        android:key="preference_font_type"
        android:title="@string/preferences_font_type_title"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="Default"
        android:entries="@array/font_types"
        android:entryValues="@array/font_types"/>

    <PreferenceCategory
        android:key="preferences_category_padding"
        android:title="@string/preferences_category_padding_title"
        android:summary="@string/preferences_category_padding_summary">
        <SeekBarPreference
            android:key="preferences_category_padding_start"
            android:title="@string/preferences_category_padding_start_title"
            android:max="25"
            android:defaultValue="5"
            app:showSeekBarValue="true"/>
        <SeekBarPreference
            android:key="preferences_category_padding_end"
            android:title="@string/preferences_category_padding_end_title"
            android:max="25"
            android:defaultValue="5"
            app:showSeekBarValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>