<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of SourCherry.
  ~
  ~ SourCherry is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ SourCherry is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with SourCherry. If not, see <https://www.gnu.org/licenses/>.
  -->

<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cherry_red_500">
    <LinearLayout
        android:id="@+id/edit_node_fragment_main_button_row"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/edit_node_fragment_button_row_clear_formatting"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/edit_node_fragment_button_row_clear_formatting"
            android:src="@drawable/baseline_format_clear_24" />
        <ImageButton
            android:id="@+id/edit_node_fragment_button_row_color_picker"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/edit_node_fragment_button_row_color_picker"
            android:src="@drawable/baseline_color_picker_24"/>
        <ImageButton
            android:id="@+id/edit_node_fragment_button_row_foreground_color"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/edit_node_fragment_button_row_foreground_color"
            android:src="@drawable/baseline_format_color_text_24" />
        <ImageButton
            android:id="@+id/edit_node_fragment_button_row_background_color"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/edit_node_fragment_button_row_background_color"
            android:src="@drawable/baseline_background_color_24" />
        <ImageButton
            android:id="@+id/edit_node_fragment_button_row_bold"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/edit_node_fragment_button_row_bold"
            android:focusable="true"
            android:src="@drawable/baseline_format_bold_24" />
        <ImageButton
            android:id="@+id/edit_node_fragment_button_row_italic"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/edit_node_fragment_button_row_italic"
            android:focusable="true"
            android:src="@drawable/baseline_format_italic_24" />
        <ImageButton
            android:id="@+id/edit_node_fragment_button_row_underline"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/edit_node_fragment_button_row_underline"
            android:focusable="true"
            android:src="@drawable/baseline_format_underlined_24" />
        <ImageButton
            android:id="@+id/edit_node_fragment_button_row_strikethrough"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/edit_node_fragment_button_row_strikethrough"
            android:src="@drawable/baseline_strikethrough_s_24" />
        <ImageButton
            android:id="@+id/edit_node_fragment_button_row_insert_row"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/edit_node_fragment_button_row_insert_menu"
            android:src="@drawable/baseline_add_circle_outline_24" />
    </LinearLayout>
</HorizontalScrollView>